Add my projects

--- a/index.html
+++ b/index.html
@@ -24,27 +24,65 @@
       </div>
 
       <div class="container-fluid" id="sec2id">
-        <div class="section2" >
-            <div class="row aboutme">
-        <div class="col">
-          <div class="container" >
-        <img src="images/nature.jpg" alt="" srcset="">
-      </div>
-       </div>
-       <div class="col">
-        <h2>About Me</h2>
-        <p>I am a passionate freelance web developer based in Nairobi, Kenya. I decided to take classes in programming after a growing interest in computer science. This interest grew after I completed my Bachelors' in Real Estate and realised that one can implement computer programming to solve various problems across all industries. With one year experience as a web developer, I have acquired necessary skills to build great websites and continue to do it on freelance basis. My current hobbies and interests include taking nature trails, planting trees, swimming and jogging.
-        <p> Connect with me today! 
-          <br> <span> Name: </span><em>Linet Mutheu</em>
-              <br>
-              <span>Email Address: </span>
-            <em>muneenilinet@gmail.com</em> 
-          </p>
-        </p>  
+        <div class="section2">
+          <div class="row aboutme">
+            <div class="col">
+              <div class="container">
+                <img src="images/nature.jpg" alt="" srcset="" />
+              </div>
+            </div>
+            <div class="col">
+              <h2>About Me</h2>
+              <p>
+                I am a passionate freelance web developer based in Nairobi,
+                Kenya. I decided to take classes in programming after a growing
+                interest in computer science. This interest grew after I
+                completed my Bachelors' in Real Estate and realised that one can
+                implement computer programming to solve various problems across
+                all industries. With one year experience as a web developer, I
+                have acquired necessary skills to build great websites and
+                continue to do it on freelance basis. My current hobbies and
+                interests include taking nature trails, planting trees, swimming
+                and jogging.
+              </p>
+              <p>Connect with me today!</p>
+              <p>
+                <span> Name: </span><em>Linet Mutheu </em
+                ><span> Email Address: </span><em>muneenilinet@gmail.com</em>
+              </p>
+            </div>
+          </div>
         </div>
-
       </div>
-    </div>
+
+      <div class="container-fluid" id="sec3id">
+        <div class="row projects">
+          <div class="col">
+            <h2>My Projects</h2>
+            <p>
+              I am a passionate freelance web developer based in Nairobi, Kenya.
+              I decided to take classes in programming after a growing interest
+              in computer science. This interest grew after I completed my
+              Bachelors' in Real Estate and realised that one can implement
+              computer programming to solve various problems across all
+              industries. With one year experience as a web developer, I have
+              acquired necessary skills to build great websites and continue to
+              do it on freelance basis. My current hobbies and interests include
+              taking nature trails, planting trees, swimming and jogging.
+            </p>
+            <p>Connect with me today!</p>
+            <p>
+              <span> Name: </span><em>Linet Mutheu </em
+              ><span> Email Address: </span><em>muneenilinet@gmail.com</em>
+            </p>
+          </div>
+          <div class="col">
+            <div class="container">
+              <img src="images/nature.jpg" alt="" srcset="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
