--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
           <div class="container-fluid"> 
             <h4 style="text-decoration: underline;">Connect with me today!</h4>
             <ul>
-              <li>Name: <em>Linet Mutheu </em</li>
-              <li>Email Address: <em>muneenilinet@gmail.com</em></li>
-              <li>Telephone: <em>+245 726 386 629</em</li>
+              <li>Name: <em>Linet Mutheu </em></li>
+              <li>Email Address: <span><em>muneenilinet@gmail.com</em></span></li>
+              <li>Telephone: <em>+245 726 386 629</em></li>
             </ul>
           </div>
         </div>
