--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                   >
                 </li>
                 <li>
-                  <a style="color: black"
-                    href="https://github.com/MutheuLinet/New-restaurant-project.git"
+                  <a style="color: black" href="https://github.com/MutheuLinet/New-restaurant-project.git"
                     >New Restaurant Project
                   </a>
                 </li>
@@ -105,7 +104,7 @@
             <ul>
               <li>Name: <em>Linet Mutheu </em></li>
               <li>Email Address: <span><em>muneenilinet@gmail.com</em></span></li>
-              <li>Telephone: <em>+245 726 386 629</em></li>
+              <li>Telephone: <em>+254 726 386 629</em></li>
             </ul>
           </div>
         </div>
