Edit projects section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <h2 id="h2">My Projects</h2>
               <p>
                 This is a collection of my favorite and most recent projects
-                that I have personally designed. They also include a link to the
+                that I have personally designed. Click on the links to the
                 respective GitHub pages.
               </p>
               <ol>
@@ -73,24 +73,24 @@
                     style="color: black"
                     href="https://github.com/MutheuLinet/my-first-webpage.git"
                     >First Webpage</a
-                  >
+                  > - This is a website created using HTML and CSS. It showcases my favorite items. 
                 </li>
                 <li>
                   <a
                     style="color: black"
                     href="https://github.com/MutheuLinet/my-first-blog-linet.git"
                     >First Blog</a
-                  >
+                  > - This is a personal blog created using Python and Django framework. 
                 </li>
                 <li>
                   <a style="color: black" href="https://github.com/MutheuLinet/New-restaurant-project.git"
                     >New Restaurant Project
-                  </a>
+                  </a> - This is a website for a new restaurant that I collaborated in designing. I used HTML for the website.
                 </li>
                 <li>
                   <a style="color: black" href="https://github.com/MutheuLinet/cookie-recipe.git"
                     >Cookie Recipe</a
-                  >
+                  > - This is a website showcasing a cookie recipe. It was created using HTML and CSS. 
                 </li>
               </ol>
             </div>
