--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="container-fluid">
                 <img
                   src="images/lightbulb.jpg"
-                  alt="This is a picture of a phone"
+                  alt="This is a picture of a lightbulb"
                   id="design-pic"
                 />
               </div>
@@ -103,7 +103,7 @@
             <h4 style="text-decoration: underline;">Connect with me today!</h4>
             <ul>
               <li>Name: <em>Linet Mutheu </em></li>
-              <li>Email Address: <span><em>muneenilinet@gmail.com</em></span></li>
+              <li>Email Address: <span>muneenilinet@gmail.com</span></li>
               <li>Telephone: <em>+254 726 386 629</em></li>
             </ul>
           </div>
