--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Landing Page</title>
-    <link rel="stylesheet" href="css/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="intro-backdrop">
+      <div class="intro-backdrop" id="sec1id">
+        <nav class="navbar navbar-light bg-none" >
+          <div class="container" id="navbarsec">
+            <a class="navbar-brand" href="#sec1id">Home</a>
+            <a class="navbar-brand" href="#sec2id">About Me</a>
+            <a class="navbar-brand" href="#sec3id">My Projects</a>
+            <a class="navbar-brand" href="#sec4id">Contact</a>
+          </div>
+        </nav>
         <div class="intro-words">
           <p>Hello</p>
           <h1>I'm <strong>Linet Mutheu</strong></h1>
@@ -63,9 +70,7 @@
             <div class="col">
               <h2 id="h2">My Projects</h2>
               <p>
-                This is a collection of my favorite and most recent projects
-                that I have personally designed. Click on the links to the
-                respective GitHub pages.
+                These are projects that have enabled me to learn various skills such as programming language efficiency, web development, web design, problem solving, time management and attention to detail. Some of the projects involved collaborating which allowed me to work in teams and appreciate the team spirit. Find the links to the respective GitHub repositories and view the projects!
               </p>
               <ol>
                 <li>
@@ -73,24 +78,19 @@
                     style="color: black"
                     href="https://github.com/MutheuLinet/my-first-webpage.git"
                     >First Webpage</a
-                  > - This is a website created using HTML and CSS. It showcases my favorite items. 
+                  > - This is a webpage written with a little guidance from Moringa School. It is created using HTML and CSS and showcases my favorite items. 
                 </li>
                 <li>
                   <a
                     style="color: black"
                     href="https://github.com/MutheuLinet/my-first-blog-linet.git"
                     >First Blog</a
-                  > - This is a personal blog created using Python and Django framework. 
+                  > - This is a personal blog with several posts made by an administrator. It's created using HTML, CSS, Python and Django framework. 
                 </li>
                 <li>
                   <a style="color: black" href="https://github.com/MutheuLinet/New-restaurant-project.git"
                     >New Restaurant Project
-                  </a> - This is a website for a new restaurant that I collaborated in designing. I used HTML for the website.
-                </li>
-                <li>
-                  <a style="color: black" href="https://github.com/MutheuLinet/cookie-recipe.git"
-                    >Cookie Recipe</a
-                  > - This is a website showcasing a cookie recipe. It was created using HTML and CSS. 
+                  </a> - This is a webpage for a new restaurant that I collaborated in designing. It shows the menu items and prices and was created using HTML and CSS technologies.
                 </li>
               </ol>
             </div>
@@ -108,6 +108,6 @@
             </ul>
           </div>
         </div>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>  
   </body>
 </html>
